--- a/src/assets/styles/scss/general/general.scss
+++ b/src/assets/styles/scss/general/general.scss
@@ -306,6 +306,7 @@
   background-color: $secondary;
   color: $white;
   overflow: hidden;
+  height: -webkit-fill-available;
 
   .noise {
     height: 100%;
