--- a/src/assets/styles/css/main.css
+++ b/src/assets/styles/css/main.css
@@ -637,8 +637,9 @@ details, summary {
 .section--jungles {
   background-color: #393939;
   color: #fff;
-  overflow: hidden; }
-  /* line 310, ../scss/general/general.scss */
+  overflow: hidden;
+  height: -webkit-fill-available; }
+  /* line 311, ../scss/general/general.scss */
   .section--jungles .noise {
     height: 100%;
     left: 0;
@@ -648,7 +649,7 @@ details, summary {
     top: 0;
     width: 100%;
     z-index: 0; }
-    /* line 320, ../scss/general/general.scss */
+    /* line 321, ../scss/general/general.scss */
     .section--jungles .noise div {
       position: absolute;
       inset: -500px;
@@ -724,12 +725,12 @@ details, summary {
   100% {
     -webkit-transform: translate(-100px, 100px);
     transform: translate(-100px, 100px); } }
-  /* line 386, ../scss/general/general.scss */
+  /* line 387, ../scss/general/general.scss */
   .section--jungles .jungles__title-wrap {
     position: fixed;
     z-index: 14;
     width: 100%; }
-    /* line 391, ../scss/general/general.scss */
+    /* line 392, ../scss/general/general.scss */
     .section--jungles .jungles__title-wrap div {
       display: block;
       width: 200%;
@@ -739,10 +740,10 @@ details, summary {
       -webkit-animation: moving 30s linear infinite;
       animation: moving 30s linear infinite; }
       @media (max-width: 768px) {
-        /* line 391, ../scss/general/general.scss */
+        /* line 392, ../scss/general/general.scss */
         .section--jungles .jungles__title-wrap div {
           height: 118px; } }
-      /* line 404, ../scss/general/general.scss */
+      /* line 405, ../scss/general/general.scss */
       .section--jungles .jungles__title-wrap div span {
         padding: 0 45px;
         width: 50%;
@@ -753,7 +754,7 @@ details, summary {
         -webkit-text-fill-color: transparent;
         -webkit-text-stroke: 1px rgba(255, 255, 255, 0.5); }
         @media (max-width: 768px) {
-          /* line 404, ../scss/general/general.scss */
+          /* line 405, ../scss/general/general.scss */
           .section--jungles .jungles__title-wrap div span {
             font-size: 110px;
             line-height: 110px;
@@ -768,7 +769,7 @@ details, summary {
     left: 0; }
   100% {
     left: -100%; } }
-  /* line 433, ../scss/general/general.scss */
+  /* line 434, ../scss/general/general.scss */
   .section--jungles .jungles {
     padding-right: 48px;
     padding-left: 48px;
@@ -776,32 +777,32 @@ details, summary {
     position: relative;
     z-index: 15; }
     @media (max-width: 768px) {
-      /* line 433, ../scss/general/general.scss */
+      /* line 434, ../scss/general/general.scss */
       .section--jungles .jungles {
         padding-left: 23px;
         padding-right: 23px;
         padding-top: 165px; } }
-    /* line 446, ../scss/general/general.scss */
+    /* line 447, ../scss/general/general.scss */
     .section--jungles .jungles__desc {
       max-width: 450px; }
       @media (max-width: 768px) {
-        /* line 446, ../scss/general/general.scss */
+        /* line 447, ../scss/general/general.scss */
         .section--jungles .jungles__desc {
           margin: 0 auto;
           text-align: center; } }
-      /* line 454, ../scss/general/general.scss */
+      /* line 455, ../scss/general/general.scss */
       .section--jungles .jungles__desc p {
         margin-bottom: 10px; }
-      /* line 458, ../scss/general/general.scss */
+      /* line 459, ../scss/general/general.scss */
       .section--jungles .jungles__desc a {
         color: #FF0000;
         text-decoration: underline;
         display: block;
         margin-top: 30px; }
-        /* line 464, ../scss/general/general.scss */
+        /* line 465, ../scss/general/general.scss */
         .section--jungles .jungles__desc a:hover {
           text-decoration: none; }
-    /* line 470, ../scss/general/general.scss */
+    /* line 471, ../scss/general/general.scss */
     .section--jungles .jungles__list {
       margin-top: 100px;
       display: -webkit-box;
@@ -814,10 +815,10 @@ details, summary {
           flex-wrap: wrap;
       width: 100%; }
       @media (max-width: 768px) {
-        /* line 470, ../scss/general/general.scss */
+        /* line 471, ../scss/general/general.scss */
         .section--jungles .jungles__list {
           margin-top: 60px; } }
-      /* line 480, ../scss/general/general.scss */
+      /* line 481, ../scss/general/general.scss */
       .section--jungles .jungles__list .jungles__item {
         width: 23%;
         margin-bottom: 150px;
@@ -829,39 +830,39 @@ details, summary {
             -ms-flex-direction: column;
                 flex-direction: column; }
         @media (max-width: 1024px) {
-          /* line 480, ../scss/general/general.scss */
+          /* line 481, ../scss/general/general.scss */
           .section--jungles .jungles__list .jungles__item {
             width: 43%; } }
         @media (max-width: 768px) {
-          /* line 480, ../scss/general/general.scss */
+          /* line 481, ../scss/general/general.scss */
           .section--jungles .jungles__list .jungles__item {
             width: 100%;
             -webkit-box-align: center;
                 -ms-flex-align: center;
                     align-items: center;
             margin-bottom: 50px; } }
-        /* line 496, ../scss/general/general.scss */
+        /* line 497, ../scss/general/general.scss */
         .section--jungles .jungles__list .jungles__item:nth-child(4n-2) {
           margin-top: 50px; }
           @media (max-width: 768px) {
-            /* line 496, ../scss/general/general.scss */
+            /* line 497, ../scss/general/general.scss */
             .section--jungles .jungles__list .jungles__item:nth-child(4n-2) {
               margin-top: 50px; } }
-        /* line 504, ../scss/general/general.scss */
+        /* line 505, ../scss/general/general.scss */
         .section--jungles .jungles__list .jungles__item:nth-child(4n-1) {
           margin-top: 100px; }
           @media (max-width: 768px) {
-            /* line 504, ../scss/general/general.scss */
+            /* line 505, ../scss/general/general.scss */
             .section--jungles .jungles__list .jungles__item:nth-child(4n-1) {
               margin-top: 50px; } }
-        /* line 512, ../scss/general/general.scss */
+        /* line 513, ../scss/general/general.scss */
         .section--jungles .jungles__list .jungles__item:nth-child(4n) {
           margin-top: 150px; }
           @media (max-width: 768px) {
-            /* line 512, ../scss/general/general.scss */
+            /* line 513, ../scss/general/general.scss */
             .section--jungles .jungles__list .jungles__item:nth-child(4n) {
               margin-top: 50px; } }
-        /* line 520, ../scss/general/general.scss */
+        /* line 521, ../scss/general/general.scss */
         .section--jungles .jungles__list .jungles__item img {
           max-width: 400px;
           width: 100%;
@@ -869,24 +870,24 @@ details, summary {
           transition: -webkit-transform 2.5s ease-out 0s;
           transition: transform 2.5s ease-out 0s;
           transition: transform 2.5s ease-out 0s, -webkit-transform 2.5s ease-out 0s; }
-        /* line 526, ../scss/general/general.scss */
+        /* line 527, ../scss/general/general.scss */
         .section--jungles .jungles__list .jungles__item-info {
           max-width: 400px;
           width: 100%; }
-          /* line 530, ../scss/general/general.scss */
+          /* line 531, ../scss/general/general.scss */
           .section--jungles .jungles__list .jungles__item-info .jungles__item-title {
             font-size: 18px;
             font-weight: 700;
             margin-bottom: 10px;
             margin-top: 10px; }
-          /* line 537, ../scss/general/general.scss */
+          /* line 538, ../scss/general/general.scss */
           .section--jungles .jungles__list .jungles__item-info .jungles__item-date {
             font-size: 14px;
             color: #d1d1d1; }
-          /* line 542, ../scss/general/general.scss */
+          /* line 543, ../scss/general/general.scss */
           .section--jungles .jungles__list .jungles__item-info .jungles__item-desc {
             max-width: 400px; }
-          /* line 546, ../scss/general/general.scss */
+          /* line 547, ../scss/general/general.scss */
           .section--jungles .jungles__list .jungles__item-info .jungles__item-link {
             max-width: -webkit-fit-content;
             max-width: -moz-fit-content;
@@ -896,10 +897,10 @@ details, summary {
             color: #FF0000;
             text-decoration: underline; }
             @media (max-width: 768px) {
-              /* line 546, ../scss/general/general.scss */
+              /* line 547, ../scss/general/general.scss */
               .section--jungles .jungles__list .jungles__item-info .jungles__item-link {
                 margin-top: 15px; } }
-            /* line 557, ../scss/general/general.scss */
+            /* line 558, ../scss/general/general.scss */
             .section--jungles .jungles__list .jungles__item-info .jungles__item-link:hover {
               text-decoration: none; }
 
