--- a/src/assets/styles/css/main.css
+++ b/src/assets/styles/css/main.css
@@ -636,10 +636,8 @@ details, summary {
 /* line 305, ../scss/general/general.scss */
 .section--jungles {
   background-color: #393939;
-  color: #fff;
-  overflow: hidden;
-  height: -webkit-fill-available; }
-  /* line 311, ../scss/general/general.scss */
+  color: #fff; }
+  /* line 309, ../scss/general/general.scss */
   .section--jungles .noise {
     height: 100%;
     left: 0;
@@ -649,11 +647,11 @@ details, summary {
     top: 0;
     width: 100%;
     z-index: 0; }
-    /* line 321, ../scss/general/general.scss */
+    /* line 319, ../scss/general/general.scss */
     .section--jungles .noise div {
       position: absolute;
       inset: -500px;
-      background: url("/src/assets/images/common/noise.png") 0px 0px/320px 320px transparent;
+      background: url("../../images/common/noise.png") 0px 0px/320px 320px transparent;
       opacity: 0.2;
       -webkit-animation: noise 1s steps(8, end) infinite both;
               animation: noise 1s steps(8, end) infinite both; }
@@ -725,12 +723,12 @@ details, summary {
   100% {
     -webkit-transform: translate(-100px, 100px);
     transform: translate(-100px, 100px); } }
-  /* line 387, ../scss/general/general.scss */
+  /* line 385, ../scss/general/general.scss */
   .section--jungles .jungles__title-wrap {
     position: fixed;
     z-index: 14;
     width: 100%; }
-    /* line 392, ../scss/general/general.scss */
+    /* line 390, ../scss/general/general.scss */
     .section--jungles .jungles__title-wrap div {
       display: block;
       width: 200%;
@@ -740,10 +738,10 @@ details, summary {
       -webkit-animation: moving 30s linear infinite;
       animation: moving 30s linear infinite; }
       @media (max-width: 768px) {
-        /* line 392, ../scss/general/general.scss */
+        /* line 390, ../scss/general/general.scss */
         .section--jungles .jungles__title-wrap div {
           height: 118px; } }
-      /* line 405, ../scss/general/general.scss */
+      /* line 403, ../scss/general/general.scss */
       .section--jungles .jungles__title-wrap div span {
         padding: 0 45px;
         width: 50%;
@@ -754,7 +752,7 @@ details, summary {
         -webkit-text-fill-color: transparent;
         -webkit-text-stroke: 1px rgba(255, 255, 255, 0.5); }
         @media (max-width: 768px) {
-          /* line 405, ../scss/general/general.scss */
+          /* line 403, ../scss/general/general.scss */
           .section--jungles .jungles__title-wrap div span {
             font-size: 110px;
             line-height: 110px;
@@ -769,7 +767,7 @@ details, summary {
     left: 0; }
   100% {
     left: -100%; } }
-  /* line 434, ../scss/general/general.scss */
+  /* line 432, ../scss/general/general.scss */
   .section--jungles .jungles {
     padding-right: 48px;
     padding-left: 48px;
@@ -777,32 +775,32 @@ details, summary {
     position: relative;
     z-index: 15; }
     @media (max-width: 768px) {
-      /* line 434, ../scss/general/general.scss */
+      /* line 432, ../scss/general/general.scss */
       .section--jungles .jungles {
         padding-left: 23px;
         padding-right: 23px;
         padding-top: 165px; } }
-    /* line 447, ../scss/general/general.scss */
+    /* line 445, ../scss/general/general.scss */
     .section--jungles .jungles__desc {
       max-width: 450px; }
       @media (max-width: 768px) {
-        /* line 447, ../scss/general/general.scss */
+        /* line 445, ../scss/general/general.scss */
         .section--jungles .jungles__desc {
           margin: 0 auto;
           text-align: center; } }
-      /* line 455, ../scss/general/general.scss */
+      /* line 453, ../scss/general/general.scss */
       .section--jungles .jungles__desc p {
         margin-bottom: 10px; }
-      /* line 459, ../scss/general/general.scss */
+      /* line 457, ../scss/general/general.scss */
       .section--jungles .jungles__desc a {
         color: #FF0000;
         text-decoration: underline;
         display: block;
         margin-top: 30px; }
-        /* line 465, ../scss/general/general.scss */
+        /* line 463, ../scss/general/general.scss */
         .section--jungles .jungles__desc a:hover {
           text-decoration: none; }
-    /* line 471, ../scss/general/general.scss */
+    /* line 469, ../scss/general/general.scss */
     .section--jungles .jungles__list {
       margin-top: 100px;
       display: -webkit-box;
@@ -815,10 +813,10 @@ details, summary {
           flex-wrap: wrap;
       width: 100%; }
       @media (max-width: 768px) {
-        /* line 471, ../scss/general/general.scss */
+        /* line 469, ../scss/general/general.scss */
         .section--jungles .jungles__list {
           margin-top: 60px; } }
-      /* line 481, ../scss/general/general.scss */
+      /* line 479, ../scss/general/general.scss */
       .section--jungles .jungles__list .jungles__item {
         width: 23%;
         margin-bottom: 150px;
@@ -830,39 +828,39 @@ details, summary {
             -ms-flex-direction: column;
                 flex-direction: column; }
         @media (max-width: 1024px) {
-          /* line 481, ../scss/general/general.scss */
+          /* line 479, ../scss/general/general.scss */
           .section--jungles .jungles__list .jungles__item {
             width: 43%; } }
         @media (max-width: 768px) {
-          /* line 481, ../scss/general/general.scss */
+          /* line 479, ../scss/general/general.scss */
           .section--jungles .jungles__list .jungles__item {
             width: 100%;
             -webkit-box-align: center;
                 -ms-flex-align: center;
                     align-items: center;
             margin-bottom: 50px; } }
-        /* line 497, ../scss/general/general.scss */
+        /* line 495, ../scss/general/general.scss */
         .section--jungles .jungles__list .jungles__item:nth-child(4n-2) {
           margin-top: 50px; }
           @media (max-width: 768px) {
-            /* line 497, ../scss/general/general.scss */
+            /* line 495, ../scss/general/general.scss */
             .section--jungles .jungles__list .jungles__item:nth-child(4n-2) {
               margin-top: 50px; } }
-        /* line 505, ../scss/general/general.scss */
+        /* line 503, ../scss/general/general.scss */
         .section--jungles .jungles__list .jungles__item:nth-child(4n-1) {
           margin-top: 100px; }
           @media (max-width: 768px) {
-            /* line 505, ../scss/general/general.scss */
+            /* line 503, ../scss/general/general.scss */
             .section--jungles .jungles__list .jungles__item:nth-child(4n-1) {
               margin-top: 50px; } }
-        /* line 513, ../scss/general/general.scss */
+        /* line 511, ../scss/general/general.scss */
         .section--jungles .jungles__list .jungles__item:nth-child(4n) {
           margin-top: 150px; }
           @media (max-width: 768px) {
-            /* line 513, ../scss/general/general.scss */
+            /* line 511, ../scss/general/general.scss */
             .section--jungles .jungles__list .jungles__item:nth-child(4n) {
               margin-top: 50px; } }
-        /* line 521, ../scss/general/general.scss */
+        /* line 519, ../scss/general/general.scss */
         .section--jungles .jungles__list .jungles__item img {
           max-width: 400px;
           width: 100%;
@@ -870,24 +868,24 @@ details, summary {
           transition: -webkit-transform 2.5s ease-out 0s;
           transition: transform 2.5s ease-out 0s;
           transition: transform 2.5s ease-out 0s, -webkit-transform 2.5s ease-out 0s; }
-        /* line 527, ../scss/general/general.scss */
+        /* line 525, ../scss/general/general.scss */
         .section--jungles .jungles__list .jungles__item-info {
           max-width: 400px;
           width: 100%; }
-          /* line 531, ../scss/general/general.scss */
+          /* line 529, ../scss/general/general.scss */
           .section--jungles .jungles__list .jungles__item-info .jungles__item-title {
             font-size: 18px;
             font-weight: 700;
             margin-bottom: 10px;
             margin-top: 10px; }
-          /* line 538, ../scss/general/general.scss */
+          /* line 536, ../scss/general/general.scss */
           .section--jungles .jungles__list .jungles__item-info .jungles__item-date {
             font-size: 14px;
             color: #d1d1d1; }
-          /* line 543, ../scss/general/general.scss */
+          /* line 541, ../scss/general/general.scss */
           .section--jungles .jungles__list .jungles__item-info .jungles__item-desc {
             max-width: 400px; }
-          /* line 547, ../scss/general/general.scss */
+          /* line 545, ../scss/general/general.scss */
           .section--jungles .jungles__list .jungles__item-info .jungles__item-link {
             max-width: -webkit-fit-content;
             max-width: -moz-fit-content;
@@ -897,10 +895,10 @@ details, summary {
             color: #FF0000;
             text-decoration: underline; }
             @media (max-width: 768px) {
-              /* line 547, ../scss/general/general.scss */
+              /* line 545, ../scss/general/general.scss */
               .section--jungles .jungles__list .jungles__item-info .jungles__item-link {
                 margin-top: 15px; } }
-            /* line 558, ../scss/general/general.scss */
+            /* line 556, ../scss/general/general.scss */
             .section--jungles .jungles__list .jungles__item-info .jungles__item-link:hover {
               text-decoration: none; }
 
