--- a/src/assets/styles/scss/layout/header/header.scss
+++ b/src/assets/styles/scss/layout/header/header.scss
@@ -98,7 +98,7 @@
   z-index: 10;
   transition: all .375s;
   width: 100vw;
-  height: calc(100vh - calc(100vh - 100%));
+  height: 100vh;
 
   &__list {
     margin-top: auto;
