--- a/src/assets/styles/css/main.css
+++ b/src/assets/styles/css/main.css
@@ -300,47 +300,46 @@ details, summary {
   z-index: 10;
   -webkit-transition: all .375s;
   transition: all .375s;
-  width: 100vw;
-  height: 100vh; }
-  /* line 103, ../scss/layout/header/header.scss */
+  width: 100vw; }
+  /* line 102, ../scss/layout/header/header.scss */
   .nav__list {
     margin-top: auto; }
-    /* line 106, ../scss/layout/header/header.scss */
+    /* line 105, ../scss/layout/header/header.scss */
     .nav__list .nav__item {
       font-size: 175px;
       line-height: 180px;
       font-weight: 300; }
       @media (max-width: 1024px) {
-        /* line 106, ../scss/layout/header/header.scss */
+        /* line 105, ../scss/layout/header/header.scss */
         .nav__list .nav__item {
           font-size: 130px;
           line-height: 155px; } }
       @media (max-width: 768px) {
-        /* line 106, ../scss/layout/header/header.scss */
+        /* line 105, ../scss/layout/header/header.scss */
         .nav__list .nav__item {
           font-size: 82px;
           line-height: 90px; } }
       @media (max-width: 390px) {
-        /* line 106, ../scss/layout/header/header.scss */
+        /* line 105, ../scss/layout/header/header.scss */
         .nav__list .nav__item {
           font-size: 71px;
           line-height: 80px; } }
-      /* line 126, ../scss/layout/header/header.scss */
+      /* line 125, ../scss/layout/header/header.scss */
       .nav__list .nav__item:first-child {
         margin-bottom: 10px; }
-  /* line 132, ../scss/layout/header/header.scss */
+  /* line 131, ../scss/layout/header/header.scss */
   .nav__link {
     color: whitesmoke; }
-    /* line 135, ../scss/layout/header/header.scss */
+    /* line 134, ../scss/layout/header/header.scss */
     .nav__link:hover {
       color: #FF0000; }
 
-/* line 141, ../scss/layout/header/header.scss */
+/* line 140, ../scss/layout/header/header.scss */
 .nav.is-active--nav {
   visibility: visible;
   opacity: 1; }
 
-/* line 146, ../scss/layout/header/header.scss */
+/* line 145, ../scss/layout/header/header.scss */
 .nav-wrapper {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -352,16 +351,19 @@ details, summary {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  height: 100vh; }
+  height: 100vh;
+  width: 100%; }
 
 /* line 152, ../scss/layout/header/header.scss */
 .socials-nav {
   margin-top: auto;
+  margin-left: auto;
   padding-bottom: 48px; }
   @media (max-width: 768px) {
     /* line 152, ../scss/layout/header/header.scss */
     .socials-nav {
-      padding-bottom: 23px; } }
+      padding-bottom: 23px;
+      margin-left: unset; } }
 
 /* line 3, ../scss/general/general.scss */
 .section--general .general {
