--- a/src/assets/styles/scss/layout/layout.scss
+++ b/src/assets/styles/scss/layout/layout.scss
@@ -6,9 +6,15 @@
   box-sizing: border-box;
 }
 
+:root {
+  --doc-height: 100%;
+}
+
 html, body {
   width: 100%;
   margin: 0;
+  height: 100vh;
+  height: var(--doc-height);
 }
 
 body {
