--- a/src/assets/styles/css/main.css
+++ b/src/assets/styles/css/main.css
@@ -9,11 +9,17 @@
           box-sizing: border-box; }
 
 /* line 9, ../scss/layout/layout.scss */
+:root {
+  --doc-height: 100%; }
+
+/* line 13, ../scss/layout/layout.scss */
 html, body {
   width: 100%;
-  margin: 0; }
+  margin: 0;
+  height: 100vh;
+  height: var(--doc-height); }
 
-/* line 14, ../scss/layout/layout.scss */
+/* line 20, ../scss/layout/layout.scss */
 body {
   position: relative;
   font-family: 'Prompt', sans-serif;
@@ -25,40 +31,40 @@ body {
   cursor: none;
   isolation: isolate; }
 
-/* line 26, ../scss/layout/layout.scss */
+/* line 32, ../scss/layout/layout.scss */
 a, button, input, select {
   outline: none;
   border: none;
   cursor: none; }
 
-/* line 32, ../scss/layout/layout.scss */
+/* line 38, ../scss/layout/layout.scss */
 a {
   text-decoration: none;
   color: #191919; }
-  /* line 36, ../scss/layout/layout.scss */
+  /* line 42, ../scss/layout/layout.scss */
   a:hover {
     color: #FF0000; }
 
-/* line 41, ../scss/layout/layout.scss */
+/* line 47, ../scss/layout/layout.scss */
 ul, li {
   list-style-type: none; }
 
-/* line 45, ../scss/layout/layout.scss */
+/* line 51, ../scss/layout/layout.scss */
 details, summary {
   outline: none;
   border: none; }
 
-/* line 50, ../scss/layout/layout.scss */
+/* line 56, ../scss/layout/layout.scss */
 ::-webkit-scrollbar {
   width: 0;
   height: 0; }
 
-/* line 55, ../scss/layout/layout.scss */
+/* line 61, ../scss/layout/layout.scss */
 ::-moz-selection {
   background-color: #FF0000;
   color: #fff; }
 
-/* line 60, ../scss/layout/layout.scss */
+/* line 66, ../scss/layout/layout.scss */
 ::-moz-selection {
   background-color: #FF0000;
   color: #fff; }
@@ -69,7 +75,7 @@ details, summary {
 /*========================
         Common Styles
 ==========================*/
-/* line 69, ../scss/layout/layout.scss */
+/* line 75, ../scss/layout/layout.scss */
 .main {
   width: 100%;
   margin-left: auto;
@@ -77,17 +83,17 @@ details, summary {
   padding-left: 48px;
   padding-right: 48px; }
   @media (max-width: 768px) {
-    /* line 69, ../scss/layout/layout.scss */
+    /* line 75, ../scss/layout/layout.scss */
     .main {
       padding-left: 23px;
       padding-right: 23px; } }
 
-/* line 82, ../scss/layout/layout.scss */
+/* line 88, ../scss/layout/layout.scss */
 .no-scroll {
   position: fixed;
   overflow: hidden; }
 
-/* line 87, ../scss/layout/layout.scss */
+/* line 93, ../scss/layout/layout.scss */
 .cursor, .aura {
   position: fixed;
   border-radius: 100%;
@@ -100,12 +106,12 @@ details, summary {
   pointer-events: none;
   z-index: 99; }
   @media (max-width: 1024px) {
-    /* line 87, ../scss/layout/layout.scss */
+    /* line 93, ../scss/layout/layout.scss */
     .cursor, .aura {
       opacity: 1;
       visibility: hidden; } }
 
-/* line 105, ../scss/layout/layout.scss */
+/* line 111, ../scss/layout/layout.scss */
 .cursor {
   width: 8px;
   height: 8px;
@@ -113,15 +119,15 @@ details, summary {
   -webkit-transition: .2s linear background-color;
   transition: .2s linear background-color; }
 
-/* line 113, ../scss/layout/layout.scss */
+/* line 119, ../scss/layout/layout.scss */
 .cursor.is-active {
   background-color: #FF0000; }
 
-/* line 117, ../scss/layout/layout.scss */
+/* line 123, ../scss/layout/layout.scss */
 .cursor.cursor-red {
   background-color: #FF0000; }
 
-/* line 121, ../scss/layout/layout.scss */
+/* line 127, ../scss/layout/layout.scss */
 .aura {
   width: 32px;
   height: 32px;
@@ -133,34 +139,34 @@ details, summary {
   -webkit-transition: all .3s linear;
   transition: all .3s linear; }
 
-/* line 132, ../scss/layout/layout.scss */
+/* line 138, ../scss/layout/layout.scss */
 .title {
   font-size: 175px;
   line-height: 175px;
   font-weight: 300; }
   @media (max-width: 1024px) {
-    /* line 132, ../scss/layout/layout.scss */
+    /* line 138, ../scss/layout/layout.scss */
     .title {
       font-size: 97px;
       line-height: 97px; } }
   @media (max-width: 768px) {
-    /* line 132, ../scss/layout/layout.scss */
+    /* line 138, ../scss/layout/layout.scss */
     .title {
       font-size: 71px;
       line-height: 78px; } }
   @media (max-width: 390px) {
-    /* line 132, ../scss/layout/layout.scss */
+    /* line 138, ../scss/layout/layout.scss */
     .title {
       font-size: 62px;
       line-height: 74px; } }
 
-/* line 153, ../scss/layout/layout.scss */
+/* line 159, ../scss/layout/layout.scss */
 .socials {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   gap: 25px; }
-  /* line 157, ../scss/layout/layout.scss */
+  /* line 163, ../scss/layout/layout.scss */
   .socials__link {
     color: whitesmoke;
     font-size: 16px;
@@ -170,14 +176,14 @@ details, summary {
     max-width: -moz-fit-content;
     max-width: fit-content; }
     @media (max-width: 768px) {
-      /* line 157, ../scss/layout/layout.scss */
+      /* line 163, ../scss/layout/layout.scss */
       .socials__link {
         font-size: 11px; } }
     @media (max-width: 390px) {
-      /* line 157, ../scss/layout/layout.scss */
+      /* line 163, ../scss/layout/layout.scss */
       .socials__link {
         font-size: 10px; } }
-    /* line 172, ../scss/layout/layout.scss */
+    /* line 178, ../scss/layout/layout.scss */
     .socials__link:after {
       content: '';
       position: absolute;
@@ -187,10 +193,10 @@ details, summary {
       background-color: whitesmoke;
       width: 100%; }
       @media (max-width: 768px) {
-        /* line 172, ../scss/layout/layout.scss */
+        /* line 178, ../scss/layout/layout.scss */
         .socials__link:after {
           height: 1px; } }
-  /* line 187, ../scss/layout/layout.scss */
+  /* line 193, ../scss/layout/layout.scss */
   .socials .socials__item:hover .socials__link:after {
     opacity: 0; }
 
@@ -300,46 +306,47 @@ details, summary {
   z-index: 10;
   -webkit-transition: all .375s;
   transition: all .375s;
-  width: 100vw; }
-  /* line 102, ../scss/layout/header/header.scss */
+  width: 100vw;
+  height: 100vh; }
+  /* line 103, ../scss/layout/header/header.scss */
   .nav__list {
     margin-top: auto; }
-    /* line 105, ../scss/layout/header/header.scss */
+    /* line 106, ../scss/layout/header/header.scss */
     .nav__list .nav__item {
       font-size: 175px;
       line-height: 180px;
       font-weight: 300; }
       @media (max-width: 1024px) {
-        /* line 105, ../scss/layout/header/header.scss */
+        /* line 106, ../scss/layout/header/header.scss */
         .nav__list .nav__item {
           font-size: 130px;
           line-height: 155px; } }
       @media (max-width: 768px) {
-        /* line 105, ../scss/layout/header/header.scss */
+        /* line 106, ../scss/layout/header/header.scss */
         .nav__list .nav__item {
           font-size: 82px;
           line-height: 90px; } }
       @media (max-width: 390px) {
-        /* line 105, ../scss/layout/header/header.scss */
+        /* line 106, ../scss/layout/header/header.scss */
         .nav__list .nav__item {
           font-size: 71px;
           line-height: 80px; } }
-      /* line 125, ../scss/layout/header/header.scss */
+      /* line 126, ../scss/layout/header/header.scss */
       .nav__list .nav__item:first-child {
         margin-bottom: 10px; }
-  /* line 131, ../scss/layout/header/header.scss */
+  /* line 132, ../scss/layout/header/header.scss */
   .nav__link {
     color: whitesmoke; }
-    /* line 134, ../scss/layout/header/header.scss */
+    /* line 135, ../scss/layout/header/header.scss */
     .nav__link:hover {
       color: #FF0000; }
 
-/* line 140, ../scss/layout/header/header.scss */
+/* line 141, ../scss/layout/header/header.scss */
 .nav.is-active--nav {
   visibility: visible;
   opacity: 1; }
 
-/* line 145, ../scss/layout/header/header.scss */
+/* line 146, ../scss/layout/header/header.scss */
 .nav-wrapper {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -354,13 +361,13 @@ details, summary {
   height: 100vh;
   width: 100%; }
 
-/* line 152, ../scss/layout/header/header.scss */
+/* line 153, ../scss/layout/header/header.scss */
 .socials-nav {
   margin-top: auto;
   margin-left: auto;
   padding-bottom: 48px; }
   @media (max-width: 768px) {
-    /* line 152, ../scss/layout/header/header.scss */
+    /* line 153, ../scss/layout/header/header.scss */
     .socials-nav {
       padding-bottom: 23px;
       margin-left: unset; } }
