--- a/src/assets/styles/scss/layout/layout.scss
+++ b/src/assets/styles/scss/layout/layout.scss
@@ -188,3 +188,111 @@ details, summary {
     opacity: 0;
   }
 }
+
+.noise {
+  @include flex-justify-align(center, center);
+  height: 100%;
+  left: 0;
+  overflow: hidden;
+  pointer-events: none;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 20;
+
+  div {
+    position: absolute;
+    inset: -500px;
+    background: url("../../images/common/noise.png") 0px 0px / 320px 320px transparent;
+    opacity: 0.2;
+    animation: noise 1s steps(8, end) infinite both;
+
+    @keyframes noise {
+      0% {
+        -webkit-transform: translateX(0px, 0px);
+        transform: translateX(0px, 0px);
+      }
+
+      10% {
+        -webkit-transform: translate(-100px, 100px);
+        transform: translate(-100px, 100px);
+      }
+
+      20% {
+        -webkit-transform: translate(150px, -100px);
+        transform: translate(150px, -100px);
+      }
+
+      30% {
+        -webkit-transform: translate(-100px, 100px);
+        transform: translate(-100px, 100px);
+      }
+
+      40% {
+        -webkit-transform: translate(100px, -150px);
+        transform: translate(100px, -150px);
+      }
+
+      50% {
+        -webkit-transform: translate(-100px, 200px);
+        transform: translate(-100px, 200px);
+      }
+
+      60% {
+        -webkit-transform: translate(-200px, -100px);
+        transform: translate(-200px, -100px);
+      }
+
+      70% {
+        -webkit-transform: translateY(50px, 100px);
+        transform: translateY(50px, 100px);
+      }
+
+      80% {
+        -webkit-transform: translate(100px, -150px);
+        transform: translate(100px, -150px);
+      }
+
+      90% {
+        -webkit-transform: translate(0px, 200px);
+        transform: translate(0px, 200px);
+      }
+
+      100% {
+        -webkit-transform: translate(-100px, 100px);
+        transform: translate(-100px, 100px);
+      }
+    }
+  }
+
+  .title {
+    color: $white;
+    font-size: 120px;
+    line-height: 120px;
+
+    @include media-tablet {
+      font-size: 80px;
+      line-height: 80px;
+    }
+
+    @include media-mobile {
+      font-size: 51px;
+      line-height: 51px;
+    }
+  }
+
+  &.preloader {
+    background-color: #000;
+  }
+}
+
+.loaded-active .preloader {
+  -webkit-transition: opacity 1s linear 0s;
+  transition: opacity 1s linear 0s;
+  transition-delay: 10s;
+  opacity: 0;
+}
+
+.loaded .preloader {
+  display: none;
+}
