--- a/src/assets/styles/css/main.css
+++ b/src/assets/styles/css/main.css
@@ -194,6 +194,132 @@ details, summary {
   .socials .socials__item:hover .socials__link:after {
     opacity: 0; }
 
+/* line 192, ../scss/layout/layout.scss */
+.noise {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 100%;
+  left: 0;
+  overflow: hidden;
+  pointer-events: none;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 20; }
+  /* line 203, ../scss/layout/layout.scss */
+  .noise div {
+    position: absolute;
+    inset: -500px;
+    background: url("../../images/common/noise.png") 0px 0px/320px 320px transparent;
+    opacity: 0.2;
+    -webkit-animation: noise 1s steps(8, end) infinite both;
+            animation: noise 1s steps(8, end) infinite both; }
+@-webkit-keyframes noise {
+  0% {
+    -webkit-transform: translateX(0px, 0px);
+    transform: translateX(0px, 0px); }
+  10% {
+    -webkit-transform: translate(-100px, 100px);
+    transform: translate(-100px, 100px); }
+  20% {
+    -webkit-transform: translate(150px, -100px);
+    transform: translate(150px, -100px); }
+  30% {
+    -webkit-transform: translate(-100px, 100px);
+    transform: translate(-100px, 100px); }
+  40% {
+    -webkit-transform: translate(100px, -150px);
+    transform: translate(100px, -150px); }
+  50% {
+    -webkit-transform: translate(-100px, 200px);
+    transform: translate(-100px, 200px); }
+  60% {
+    -webkit-transform: translate(-200px, -100px);
+    transform: translate(-200px, -100px); }
+  70% {
+    -webkit-transform: translateY(50px, 100px);
+    transform: translateY(50px, 100px); }
+  80% {
+    -webkit-transform: translate(100px, -150px);
+    transform: translate(100px, -150px); }
+  90% {
+    -webkit-transform: translate(0px, 200px);
+    transform: translate(0px, 200px); }
+  100% {
+    -webkit-transform: translate(-100px, 100px);
+    transform: translate(-100px, 100px); } }
+@keyframes noise {
+  0% {
+    -webkit-transform: translateX(0px, 0px);
+    transform: translateX(0px, 0px); }
+  10% {
+    -webkit-transform: translate(-100px, 100px);
+    transform: translate(-100px, 100px); }
+  20% {
+    -webkit-transform: translate(150px, -100px);
+    transform: translate(150px, -100px); }
+  30% {
+    -webkit-transform: translate(-100px, 100px);
+    transform: translate(-100px, 100px); }
+  40% {
+    -webkit-transform: translate(100px, -150px);
+    transform: translate(100px, -150px); }
+  50% {
+    -webkit-transform: translate(-100px, 200px);
+    transform: translate(-100px, 200px); }
+  60% {
+    -webkit-transform: translate(-200px, -100px);
+    transform: translate(-200px, -100px); }
+  70% {
+    -webkit-transform: translateY(50px, 100px);
+    transform: translateY(50px, 100px); }
+  80% {
+    -webkit-transform: translate(100px, -150px);
+    transform: translate(100px, -150px); }
+  90% {
+    -webkit-transform: translate(0px, 200px);
+    transform: translate(0px, 200px); }
+  100% {
+    -webkit-transform: translate(-100px, 100px);
+    transform: translate(-100px, 100px); } }
+  /* line 268, ../scss/layout/layout.scss */
+  .noise .title {
+    color: #fff;
+    font-size: 120px;
+    line-height: 120px; }
+    @media (max-width: 1024px) {
+      /* line 268, ../scss/layout/layout.scss */
+      .noise .title {
+        font-size: 80px;
+        line-height: 80px; } }
+    @media (max-width: 768px) {
+      /* line 268, ../scss/layout/layout.scss */
+      .noise .title {
+        font-size: 51px;
+        line-height: 51px; } }
+  /* line 284, ../scss/layout/layout.scss */
+  .noise.preloader {
+    background-color: #000; }
+
+/* line 289, ../scss/layout/layout.scss */
+.loaded-active .preloader {
+  -webkit-transition: opacity 1s linear 0s;
+  transition: opacity 1s linear 0s;
+  -webkit-transition-delay: 10s;
+          transition-delay: 10s;
+  opacity: 0; }
+
+/* line 296, ../scss/layout/layout.scss */
+.loaded .preloader {
+  display: none; }
+
 /* line 1, ../scss/layout/header/header.scss */
 .header {
   width: 100%;
@@ -303,43 +429,48 @@ details, summary {
   width: 100vw; }
   /* line 102, ../scss/layout/header/header.scss */
   .nav__list {
-    margin-top: auto; }
-    /* line 105, ../scss/layout/header/header.scss */
+    margin-top: auto;
+    padding-top: 108px; }
+    @media (max-width: 1024px) {
+      /* line 102, ../scss/layout/header/header.scss */
+      .nav__list {
+        padding-top: 0; } }
+    /* line 110, ../scss/layout/header/header.scss */
     .nav__list .nav__item {
       font-size: 175px;
       line-height: 180px;
       font-weight: 300; }
       @media (max-width: 1024px) {
-        /* line 105, ../scss/layout/header/header.scss */
+        /* line 110, ../scss/layout/header/header.scss */
         .nav__list .nav__item {
           font-size: 130px;
           line-height: 155px; } }
       @media (max-width: 768px) {
-        /* line 105, ../scss/layout/header/header.scss */
+        /* line 110, ../scss/layout/header/header.scss */
         .nav__list .nav__item {
           font-size: 82px;
           line-height: 90px; } }
       @media (max-width: 390px) {
-        /* line 105, ../scss/layout/header/header.scss */
+        /* line 110, ../scss/layout/header/header.scss */
         .nav__list .nav__item {
           font-size: 71px;
           line-height: 80px; } }
-      /* line 125, ../scss/layout/header/header.scss */
+      /* line 130, ../scss/layout/header/header.scss */
       .nav__list .nav__item:first-child {
         margin-bottom: 10px; }
-  /* line 131, ../scss/layout/header/header.scss */
+  /* line 136, ../scss/layout/header/header.scss */
   .nav__link {
     color: whitesmoke; }
-    /* line 134, ../scss/layout/header/header.scss */
+    /* line 139, ../scss/layout/header/header.scss */
     .nav__link:hover {
       color: #FF0000; }
 
-/* line 140, ../scss/layout/header/header.scss */
+/* line 145, ../scss/layout/header/header.scss */
 .nav.is-active--nav {
   visibility: visible;
   opacity: 1; }
 
-/* line 145, ../scss/layout/header/header.scss */
+/* line 150, ../scss/layout/header/header.scss */
 .nav-wrapper {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -351,17 +482,20 @@ details, summary {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  height: 100vh;
   width: 100%;
-  padding-bottom: 48px; }
+  height: 100vh; }
+  @media (max-width: 768px) {
+    /* line 150, ../scss/layout/header/header.scss */
+    .nav-wrapper {
+      padding-bottom: 48px; } }
 
-/* line 153, ../scss/layout/header/header.scss */
+/* line 161, ../scss/layout/header/header.scss */
 .socials-nav {
   margin-top: auto;
   margin-left: auto;
   padding-bottom: 48px; }
   @media (max-width: 768px) {
-    /* line 153, ../scss/layout/header/header.scss */
+    /* line 161, ../scss/layout/header/header.scss */
     .socials-nav {
       margin-left: unset; } }
 
@@ -713,97 +847,11 @@ details, summary {
   background-color: #393939;
   color: #fff; }
   /* line 361, ../scss/general/general.scss */
-  .section--jungles .noise {
-    height: 100%;
-    left: 0;
-    overflow: hidden;
-    pointer-events: none;
-    position: fixed;
-    top: 0;
-    width: 100%;
-    z-index: 0; }
-    /* line 371, ../scss/general/general.scss */
-    .section--jungles .noise div {
-      position: absolute;
-      inset: -500px;
-      background: url("../../images/common/noise.png") 0px 0px/320px 320px transparent;
-      opacity: 0.2;
-      -webkit-animation: noise 1s steps(8, end) infinite both;
-              animation: noise 1s steps(8, end) infinite both; }
-@-webkit-keyframes noise {
-  0% {
-    -webkit-transform: translateX(0px, 0px);
-    transform: translateX(0px, 0px); }
-  10% {
-    -webkit-transform: translate(-100px, 100px);
-    transform: translate(-100px, 100px); }
-  20% {
-    -webkit-transform: translate(150px, -100px);
-    transform: translate(150px, -100px); }
-  30% {
-    -webkit-transform: translate(-100px, 100px);
-    transform: translate(-100px, 100px); }
-  40% {
-    -webkit-transform: translate(100px, -150px);
-    transform: translate(100px, -150px); }
-  50% {
-    -webkit-transform: translate(-100px, 200px);
-    transform: translate(-100px, 200px); }
-  60% {
-    -webkit-transform: translate(-200px, -100px);
-    transform: translate(-200px, -100px); }
-  70% {
-    -webkit-transform: translateY(50px, 100px);
-    transform: translateY(50px, 100px); }
-  80% {
-    -webkit-transform: translate(100px, -150px);
-    transform: translate(100px, -150px); }
-  90% {
-    -webkit-transform: translate(0px, 200px);
-    transform: translate(0px, 200px); }
-  100% {
-    -webkit-transform: translate(-100px, 100px);
-    transform: translate(-100px, 100px); } }
-@keyframes noise {
-  0% {
-    -webkit-transform: translateX(0px, 0px);
-    transform: translateX(0px, 0px); }
-  10% {
-    -webkit-transform: translate(-100px, 100px);
-    transform: translate(-100px, 100px); }
-  20% {
-    -webkit-transform: translate(150px, -100px);
-    transform: translate(150px, -100px); }
-  30% {
-    -webkit-transform: translate(-100px, 100px);
-    transform: translate(-100px, 100px); }
-  40% {
-    -webkit-transform: translate(100px, -150px);
-    transform: translate(100px, -150px); }
-  50% {
-    -webkit-transform: translate(-100px, 200px);
-    transform: translate(-100px, 200px); }
-  60% {
-    -webkit-transform: translate(-200px, -100px);
-    transform: translate(-200px, -100px); }
-  70% {
-    -webkit-transform: translateY(50px, 100px);
-    transform: translateY(50px, 100px); }
-  80% {
-    -webkit-transform: translate(100px, -150px);
-    transform: translate(100px, -150px); }
-  90% {
-    -webkit-transform: translate(0px, 200px);
-    transform: translate(0px, 200px); }
-  100% {
-    -webkit-transform: translate(-100px, 100px);
-    transform: translate(-100px, 100px); } }
-  /* line 437, ../scss/general/general.scss */
   .section--jungles .jungles__title-wrap {
     position: fixed;
     z-index: 14;
     width: 100%; }
-    /* line 442, ../scss/general/general.scss */
+    /* line 366, ../scss/general/general.scss */
     .section--jungles .jungles__title-wrap div {
       display: block;
       width: 200%;
@@ -813,10 +861,10 @@ details, summary {
       -webkit-animation: moving 30s linear infinite;
       animation: moving 30s linear infinite; }
       @media (max-width: 768px) {
-        /* line 442, ../scss/general/general.scss */
+        /* line 366, ../scss/general/general.scss */
         .section--jungles .jungles__title-wrap div {
           height: 118px; } }
-      /* line 455, ../scss/general/general.scss */
+      /* line 379, ../scss/general/general.scss */
       .section--jungles .jungles__title-wrap div span {
         padding: 0 45px;
         width: 50%;
@@ -827,7 +875,7 @@ details, summary {
         -webkit-text-fill-color: transparent;
         -webkit-text-stroke: 1px rgba(255, 255, 255, 0.5); }
         @media (max-width: 768px) {
-          /* line 455, ../scss/general/general.scss */
+          /* line 379, ../scss/general/general.scss */
           .section--jungles .jungles__title-wrap div span {
             font-size: 110px;
             line-height: 110px;
@@ -842,7 +890,7 @@ details, summary {
     left: 0; }
   100% {
     left: -100%; } }
-  /* line 484, ../scss/general/general.scss */
+  /* line 408, ../scss/general/general.scss */
   .section--jungles .jungles {
     padding-right: 48px;
     padding-left: 48px;
@@ -850,32 +898,32 @@ details, summary {
     position: relative;
     z-index: 15; }
     @media (max-width: 768px) {
-      /* line 484, ../scss/general/general.scss */
+      /* line 408, ../scss/general/general.scss */
       .section--jungles .jungles {
         padding-left: 23px;
         padding-right: 23px;
         padding-top: 165px; } }
-    /* line 497, ../scss/general/general.scss */
+    /* line 421, ../scss/general/general.scss */
     .section--jungles .jungles__desc {
       max-width: 450px; }
       @media (max-width: 768px) {
-        /* line 497, ../scss/general/general.scss */
+        /* line 421, ../scss/general/general.scss */
         .section--jungles .jungles__desc {
           margin: 0 auto;
           text-align: center; } }
-      /* line 505, ../scss/general/general.scss */
+      /* line 429, ../scss/general/general.scss */
       .section--jungles .jungles__desc p {
         margin-bottom: 10px; }
-      /* line 509, ../scss/general/general.scss */
+      /* line 433, ../scss/general/general.scss */
       .section--jungles .jungles__desc a {
         color: #FF0000;
         text-decoration: underline;
         display: block;
         margin-top: 30px; }
-        /* line 515, ../scss/general/general.scss */
+        /* line 439, ../scss/general/general.scss */
         .section--jungles .jungles__desc a:hover {
           text-decoration: none; }
-    /* line 521, ../scss/general/general.scss */
+    /* line 445, ../scss/general/general.scss */
     .section--jungles .jungles__list {
       margin-top: 100px;
       display: -webkit-box;
@@ -888,10 +936,10 @@ details, summary {
           flex-wrap: wrap;
       width: 100%; }
       @media (max-width: 768px) {
-        /* line 521, ../scss/general/general.scss */
+        /* line 445, ../scss/general/general.scss */
         .section--jungles .jungles__list {
           margin-top: 60px; } }
-      /* line 531, ../scss/general/general.scss */
+      /* line 455, ../scss/general/general.scss */
       .section--jungles .jungles__list .jungles__item {
         width: 23%;
         margin-bottom: 150px;
@@ -903,39 +951,39 @@ details, summary {
             -ms-flex-direction: column;
                 flex-direction: column; }
         @media (max-width: 1024px) {
-          /* line 531, ../scss/general/general.scss */
+          /* line 455, ../scss/general/general.scss */
           .section--jungles .jungles__list .jungles__item {
             width: 43%; } }
         @media (max-width: 768px) {
-          /* line 531, ../scss/general/general.scss */
+          /* line 455, ../scss/general/general.scss */
           .section--jungles .jungles__list .jungles__item {
             width: 100%;
             -webkit-box-align: center;
                 -ms-flex-align: center;
                     align-items: center;
             margin-bottom: 50px; } }
-        /* line 547, ../scss/general/general.scss */
+        /* line 471, ../scss/general/general.scss */
         .section--jungles .jungles__list .jungles__item:nth-child(4n-2) {
           margin-top: 50px; }
           @media (max-width: 768px) {
-            /* line 547, ../scss/general/general.scss */
+            /* line 471, ../scss/general/general.scss */
             .section--jungles .jungles__list .jungles__item:nth-child(4n-2) {
               margin-top: 50px; } }
-        /* line 555, ../scss/general/general.scss */
+        /* line 479, ../scss/general/general.scss */
         .section--jungles .jungles__list .jungles__item:nth-child(4n-1) {
           margin-top: 100px; }
           @media (max-width: 768px) {
-            /* line 555, ../scss/general/general.scss */
+            /* line 479, ../scss/general/general.scss */
             .section--jungles .jungles__list .jungles__item:nth-child(4n-1) {
               margin-top: 50px; } }
-        /* line 563, ../scss/general/general.scss */
+        /* line 487, ../scss/general/general.scss */
         .section--jungles .jungles__list .jungles__item:nth-child(4n) {
           margin-top: 150px; }
           @media (max-width: 768px) {
-            /* line 563, ../scss/general/general.scss */
+            /* line 487, ../scss/general/general.scss */
             .section--jungles .jungles__list .jungles__item:nth-child(4n) {
               margin-top: 50px; } }
-        /* line 571, ../scss/general/general.scss */
+        /* line 495, ../scss/general/general.scss */
         .section--jungles .jungles__list .jungles__item img {
           max-width: 400px;
           width: 100%;
@@ -943,24 +991,24 @@ details, summary {
           transition: -webkit-transform 2.5s ease-out 0s;
           transition: transform 2.5s ease-out 0s;
           transition: transform 2.5s ease-out 0s, -webkit-transform 2.5s ease-out 0s; }
-        /* line 577, ../scss/general/general.scss */
+        /* line 501, ../scss/general/general.scss */
         .section--jungles .jungles__list .jungles__item-info {
           max-width: 400px;
           width: 100%; }
-          /* line 581, ../scss/general/general.scss */
+          /* line 505, ../scss/general/general.scss */
           .section--jungles .jungles__list .jungles__item-info .jungles__item-title {
             font-size: 18px;
             font-weight: 700;
             margin-bottom: 10px;
             margin-top: 10px; }
-          /* line 588, ../scss/general/general.scss */
+          /* line 512, ../scss/general/general.scss */
           .section--jungles .jungles__list .jungles__item-info .jungles__item-date {
             font-size: 14px;
             color: #d1d1d1; }
-          /* line 593, ../scss/general/general.scss */
+          /* line 517, ../scss/general/general.scss */
           .section--jungles .jungles__list .jungles__item-info .jungles__item-desc {
             max-width: 400px; }
-          /* line 597, ../scss/general/general.scss */
+          /* line 521, ../scss/general/general.scss */
           .section--jungles .jungles__list .jungles__item-info .jungles__item-link {
             max-width: -webkit-fit-content;
             max-width: -moz-fit-content;
@@ -970,10 +1018,10 @@ details, summary {
             color: #FF0000;
             text-decoration: underline; }
             @media (max-width: 768px) {
-              /* line 597, ../scss/general/general.scss */
+              /* line 521, ../scss/general/general.scss */
               .section--jungles .jungles__list .jungles__item-info .jungles__item-link {
                 margin-top: 15px; } }
-            /* line 608, ../scss/general/general.scss */
+            /* line 532, ../scss/general/general.scss */
             .section--jungles .jungles__list .jungles__item-info .jungles__item-link:hover {
               text-decoration: none; }
 
