--- a/src/assets/styles/scss/layout/header/header.scss
+++ b/src/assets/styles/scss/layout/header/header.scss
@@ -101,6 +101,11 @@
 
   &__list {
     margin-top: auto;
+    padding-top: 108px;
+
+    @include media-tablet {
+      padding-top: 0;
+    }
 
     .nav__item {
       font-size: 175px;
@@ -145,9 +150,12 @@
 .nav-wrapper {
   @include flex-justify(center);
   flex-direction: column;
-  height: 100vh;
   width: 100%;
-  padding-bottom: 48px;
+  height: 100vh;
+
+  @include media-mobile {
+    padding-bottom: 48px;
+  }
 }
 
 .socials-nav {
