--- a/src/assets/styles/scss/layout/layout.scss
+++ b/src/assets/styles/scss/layout/layout.scss
@@ -294,5 +294,13 @@ details, summary {
 }
 
 .loaded .preloader {
-  display: none;
+  animation: fadeOut 1s;
+  animation-fill-mode: forwards;
+
+  @keyframes fadeOut {
+    100% {
+      opacity: 0;
+      visibility: hidden;
+    }
+  }
 }
