--- a/src/assets/styles/scss/general/general.scss
+++ b/src/assets/styles/scss/general/general.scss
@@ -122,10 +122,16 @@
       font-size: 50px;
       font-weight: 300;
       line-height: 50px;
+      transition: all 0.1s linear;
 
       @include media-mobile {
         font-size: 29px;
         line-height: 29px;
+      }
+
+      &:hover {
+        opacity: 0.7;
+        transition: all 0.1s linear;
       }
     }
 
@@ -151,6 +157,9 @@
       max-width: 960px;
       height: 580px;
       transform: translate(0%, -50%);
+      box-shadow: 1px 1px 9px 0px rgba(0,0,0,0.51);
+      -webkit-box-shadow: 1px 1px 9px 0px rgba(0,0,0,0.51);
+      -moz-box-shadow: 1px 1px 9px 0px rgba(0,0,0,0.51);
 
       @include media-tablet {
         position: unset;
