--- a/src/assets/styles/scss/main.css
+++ b/src/assets/styles/scss/main.css
@@ -86,10 +86,10 @@ details, summary {
 }
 
 .cursor, .aura {
-  position: fixed;
+  position: absolute;
+  top: 0;
+  left: 0;
   border-radius: 100%;
-  -webkit-transition: 0.2s cubic-bezier(0.75, -1.27, 0.3, 2.33) opacity, 0.5s cubic-bezier(0.75, -1.27, 0.3, 2.33) -webkit-transform;
-  transition: 0.2s cubic-bezier(0.75, -1.27, 0.3, 2.33) opacity, 0.5s cubic-bezier(0.75, -1.27, 0.3, 2.33) -webkit-transform;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
@@ -107,9 +107,10 @@ details, summary {
 .cursor {
   width: 8px;
   height: 8px;
+  margin-top: -4px;
+  margin-left: -4px;
   background-color: #222222;
-  -webkit-transition: 0.2s linear background-color;
-  transition: 0.2s linear background-color;
+  transition: background-color 0.2s linear;
 }
 
 .cursor.is-active {
@@ -123,11 +124,12 @@ details, summary {
 .aura {
   width: 32px;
   height: 32px;
+  margin-top: -16px;
+  margin-left: -16px;
   background-color: #222222;
   opacity: 0.5;
   transform: translate(-12px, -12px);
   mix-blend-mode: difference;
-  -webkit-transition: all 0.3s linear;
   transition: all 0.3s linear;
 }
 
